Fixed an issue where some movie overviews were too long and running off the bottom of the page

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -121,7 +121,7 @@ body {
     margin: 0.5em 1em; }
   .result .movie-info {
     text-align: left;
-    padding: 0 1em;
+ /*   padding: 0 1em; */
     line-height: 2em;
     margin-top: 0.35em;
     margin-right: 5em;
@@ -133,7 +133,10 @@ body {
       color: #DE341D; }
     .result .movie-info li {
       list-style-type: none;
-      display: inline; }
+      display: inline-block; }
+	.result .movie-info span {
+		display: inline;
+	} 
   .result .overview {
     height: 7.75em;
     text-align: left;
